# My-KDE

./: README.md  install.sh
source/: CMakeLists.txt  main.cpp  main.qml
